cleaned up layout issues associated with display none vs visibility

--- a/public/Styles/containerStyles.css
+++ b/public/Styles/containerStyles.css
@@ -4,7 +4,6 @@ body {
     background-image: url("../images/andrew-mcelroy-football-field.jpg");
     background-size: cover;
     height: 100%;
-    min-height:1200px;
     margin: 0em;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -49,6 +48,7 @@ body {
     flex-direction: column;
     overscroll-behavior-y: none;
     overscroll-behavior-x: none;
+    top: 20px;
   }
 
 
