--- a/public/Styles/inputStyles.css
+++ b/public/Styles/inputStyles.css
@@ -149,7 +149,7 @@ select option{
       }
       @media(max-width: 800px){
         #position-select{
-          padding-left: 90px;
+          padding-left: 80px;
         }   
 
       @media(max-width: 550px){
